--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "engines": {
     "node": ">10.0.0"
   },
-  "author": "Sopa",
-  "license": "SoPa",
+  "author": "aakash",
+  "license": "aakash",
   "nodemonConfig": {
     "restartable": "rs",
     "ignore": [
